fixed functionality for touch recognition on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,7 +133,7 @@ button {
 
 .jumbotron h1 {
     font-family: 'Press Start 2P', cursive;
-    font-size: 225%;
+    font-size: 170%;
 }
 
 .footer {
